fix(java_common): replace or remove JDK9+ methods (#3930)